[package]
name = "ket"
version = "0.1.0"
authors = ["Pav Khemerak <pavkhemerak.official@gmail.com>"]
edition = "2024"

[dependencies]
clap = "2.33"
reqwest = { version = "0.11", features = ["blocking"] }
indicatif = "0.17"
console = "0.15"
anyhow = "1.0"
dirs = "6.0.0"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link-Time Optimization (compresses better)
codegen-units = 1   # Reduces size at the cost of longer compile time
panic = "abort"     # Removes panic unwinding code (optional, but saves space)
strip = true        # Automatically strip symbols from the binary (Rust 1.59+)